<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home"
    tools:context=".ListGames">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginEnd="5dp"
        android:clickable="true"
        android:layoutDirection="ltr"
        android:visibility="visible"
        app:backgroundTint="#fd9298 "
        app:fabSize="mini"
        app:layout_constraintEnd_toStartOf="@+id/linGame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back"
        tools:ignore="KeyboardInaccessibleWidget" />

    <LinearLayout
        android:id="@+id/linGame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="40dp"
        android:orientation="vertical"
        android:weightSum="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button10"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/findme"
            android:layoutDirection="ltr"
            android:paddingStart="90dp"
            android:text="@string/find_me"
            android:textAlignment="center"
            android:textSize="10sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button11"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/loseme"
            android:layoutDirection="ltr"
            android:paddingStart="95dp"
            android:text="@string/lose_me"
            android:textSize="10sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button12"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/matchme"
            android:layoutDirection="ltr"
            android:paddingStart="90dp"
            android:text="@string/match_me"
            android:textSize="10sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button13"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/calcme"
            android:layoutDirection="ltr"
            android:paddingStart="100dp"
            android:text="@string/calc_me"
            android:textSize="10sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>