<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home"
    android:orientation="vertical"
    tools:context=".Settings">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonBack8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:clickable="true"
        android:layoutDirection="ltr"
        android:visibility="visible"
        app:backgroundTint="#fd9298 "
        app:fabSize="mini"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back"
        tools:ignore="KeyboardInaccessibleWidget" />

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/lanuage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blue"
            android:drawableStart="@drawable/iconlanguage"
            android:layoutDirection="locale"
            android:text="@string/language"
            android:textAlignment="center"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sound"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/pink"
            android:drawableStart="@drawable/iconmute"
            android:layoutDirection="locale"
            android:text="@string/mute_sound"
            android:textAlignment="center"
            android:textStyle="bold" />

        <Button
            android:id="@+id/music"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/yellow"
            android:drawableStart="@drawable/iconunmusic"
            android:layoutDirection="locale"
            android:text="@string/mute_music"
            android:textAlignment="center"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/seekBarAudio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>